# YuriTrader

./: .env.example  .gitignore  START_HERE.md  TRADING_AGENT.md  crontab.gx10  pyproject.toml
.claude/: settings.json
canvas/: agent-overview.html  agents.html  bot-arena-stocks.html  bot-arena.html  dashboard.html  disclaimer.html  gfa.html  health.html  index.html  kraken.html  landing.html  login.html  newsletter-draft.html  opening-backtest-compound.html  opening-backtest.html  opening-sim-2026-06-26.html  opening-sim-5min.html  opening-sim-improved.html  opening-sim-liveengine.html  opening-sim-variant.html  paper-tracker.html  procurement.html  system-flow.html  trading.html  trial-results.html  yt-strategies-rayner-teo.html
dashboard-proxy/: Caddyfile
docs/: ARCHITECTURE.md  BUILD.md  CLAUDE.md  DASHBOARDS.md  OPERATIONS.md
infra/ib-gateway/: docker-compose.yml
projects/content-pipeline/: orchestrator.md
projects/email-intelligence/: orchestrator.md
projects/expense-pipeline/: orchestrator.md
projects/investor-pipeline/: orchestrator.md
projects/procurement-pipeline/: ab_municipalities.json  associations.json  bc_municipalities.json  dry_run_eval.py  enrich_temp.py  evaluate_tenders.py  find_ab_muni.py  find_bc_muni.py  orchestrator.md  run_evaluator.py  scrape_ab_assn.py  scrape_cca.py  scrape_events.py  signin_deep_dive.py
systemd/: dashboard-proxy.service  rc-family-bot.service  stock-concierge.service  trading-agent.service  trading-arena.service  trading-concierge.service  tv-chrome.service  tv-webhook.service  yuri.service
(+420 files in other folders)
