[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw"
version = "0.1.0"
description = "OpenClaw trading + automation stack (GX10 native runtime)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "pandas>=2.0",
    "playwright>=1.50",
    "python-dotenv>=1.0",
]

[tool.setuptools]
py-modules = []
